# NFL-Predictions-API

./: .env.example  .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt
models/: predictions.py
routes/: ml_models_routes.py  nfl_predictions_routes.py  predictions_routes.py
services/: model_package_services.py  nfl_predictions_services.py  predictions_services.py
tests/: test_predictions_routes.py
